--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,7 @@ http://localhost:8093/order
 
 TODO
 add UNREGISTERED marker for client/company + delete them in the future
+
+TODO
+remove path variable name
+remove mapstruct maven config
