--- a/todo.txt
+++ b/todo.txt
@@ -10,4 +10,5 @@ TODO
 add UNREGISTERED marker for client/company + delete them in the future
 
 TODO
+add log gatherer
 remove mapstruct maven config
