--- a/todo.txt
+++ b/todo.txt
@@ -12,3 +12,4 @@ add UNREGISTERED marker for client/company + delete them in the future
 TODO
 add log gatherer
 delete client flow
+statistics published to prometheus + grafana
