--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 QUEUE ADMIN
 http://localhost:8161/admin/index.jsp
+EUREKA ADMIN
+http://localhost:8761/
 
 http://localhost:8090/client
 http://localhost:8091/company
