--- a/todo.txt
+++ b/todo.txt
@@ -14,5 +14,9 @@ add UNREGISTERED marker for client/company + delete them in the future => add ma
 TODO
 add log gatherer => grafana loki for logs Recently moved from ELK->Loki/grafana and not looking back.
 spring cloud gateway / spring-cloud-kubernetes
-parallel processing
-add correlation id
+
+add correlation id => https://github.com/micrometer-metrics/tracing
+<dependency>
+    <groupId>io.micrometer</groupId>
+    <artifactId>micrometer-tracing-bridge-otel</artifactId>
+</dependency>
