--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,7 @@ EUREKA ADMIN
 http://localhost:8761/
 
 TODO
-replace apache camel rest with proper controllers
+replace apache camel rest+jms with proper controllers
 
 add log gatherer => grafana loki for logs Recently moved from ELK->Loki/grafana and not looking back.
 spring cloud gateway / spring-cloud-kubernetes
