--- a/todo.txt
+++ b/todo.txt
@@ -4,12 +4,10 @@ EUREKA ADMIN
 http://localhost:8761/
 
 TODO
-replace apache camel rest+jms with proper controllers
-
 add log gatherer => grafana loki for logs Recently moved from ELK->Loki/grafana and not looking back.
 spring cloud gateway / spring-cloud-kubernetes
 
-add correlation id / observability => https://github.com/micrometer-metrics/tracing
+observability => https://github.com/micrometer-metrics/tracing
 <dependency>
     <groupId>io.micrometer</groupId>
     <artifactId>micrometer-tracing-bridge-otel</artifactId>
