--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,5 @@ http://localhost:8761/
 TODO
 replace jms with kafka
 spring cloud gateway / spring-cloud-kubernetes
+
+order -> NEW -> CONFIRMED -> COMPLETED/CANCELLED -> SEND TO INVOICE -> INVOICED
