--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,5 @@ http://localhost:8761/
 TODO
 spring cloud gateway / spring-cloud-kubernetes
 (jms+db) transactional
+cancelling -> cancelled + retry
+invoicing -> invoiced + retry
