--- a/todo.txt
+++ b/todo.txt
@@ -6,5 +6,6 @@ http://localhost:8761/
 TODO
 spring cloud gateway / spring-cloud-kubernetes
 (jms+db) transactional
+retiring -> retired + retry
 cancelling -> cancelled + retry
 invoicing -> invoiced + retry
