--- a/todo.txt
+++ b/todo.txt
@@ -9,3 +9,4 @@ spring cloud gateway / spring-cloud-kubernetes
 retiring -> retired + retry
 cancelling -> cancelled + retry
 invoicing -> invoiced + retry
+order -> invoice created -> mark as invoicing
