--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,8 @@ http://localhost:8761/
 
 TODO
 spring cloud gateway / spring-cloud-kubernetes
+product refill vs consumed/cancelled
 (jms+db) transactional
-retiring -> retired + retry
 cancelling -> cancelled + retry
 invoicing -> invoiced + retry
 order -> invoice created -> mark as invoicing
